--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
 <title >Машина про яку я мрію  </title>
 
-<body style="background: Silver ; font-family:sans-serif">
+<body style="background: Silver ; text-align: center;font-family:sans-serif">
     <header>
         <!-- Шапка: назва сайту, логотип, посилання -->
      <h1      style="text-align:center ;color:red;  font-size:50px; background-color:black  "> BMW X
         <br/>
-    <img src="https://learn.logikaschool.com/uploads/student/5361464/67fe20b40b491.jpg" width="300px"> 
+    <img src="https://learn.logikaschool.com/uploads/student/5361464/6822f05189a4d.jpg" width="300px"> 
      </h1>
 <p style="text-align:center;padding:15px; text-decoration:none">
      <a href="#1"  style="color:  Teal ; font-size:25px; margin: 0 20px;">характеристики  </a>
